--- a/src/components/HamburgerMenu.css
+++ b/src/components/HamburgerMenu.css
@@ -5,7 +5,7 @@
     backdrop-filter: blur(5px);
     position: absolute;
     top: 20px; /* Adjust based on your layout */
-    right: 0;
+    right: 70px;
     width: auto;
     padding: 20px;
     text-align: center;
@@ -16,6 +16,7 @@
 .hamburger-react {
     position: relative;
     z-index: 10000; /* Ensure the Hamburger icon is always above the menu */
+    color: #fff;
   }
 
 .menu.show {
@@ -58,4 +59,8 @@
 
 .menu a:hover {
     color: #ff5722;
+}
+.menu a.active {
+    color: #ff5722;
+    font-weight: bold;
 }
