--- a/src/components/HamburgerMenu.css
+++ b/src/components/HamburgerMenu.css
@@ -1,6 +1,5 @@
 .menu {
     background-color: rgba(56, 56, 56, 0.95); /* Slightly opaque background for contrast */
-    border-radius: 10px;
     backdrop-filter: blur(5px);
     position: fixed;
     top: 0;
@@ -9,14 +8,10 @@
     height: 100vh;
     padding: 40px;
     text-align: center;
-    opacity: 0; /* Start hidden */
-    transform: translateX(100vw) translateY(-100vh) rotate(45deg); /* Start off-screen top-right and rotated */
-    transition: opacity 1s cubic-bezier(0.77, 0, 0.175, 1) 0.2s, /* Reduced delay for the menu */
-                transform 1s cubic-bezier(0.77, 0, 0.175, 1) 0.2s, 
-                scale 1s cubic-bezier(0.77, 0, 0.175, 1) 0.2s; 
-    display: flex;
-    justify-content: center;
-    align-items: center;
+            border-bottom-left-radius: 200%;
+            z-index: -1;
+            transform: translateX(100%) translateY(-100%);
+            transition: transform cubic-bezier(0.77, 0, 0.175, 1) 0.6s, border-radius linear 0.8s;
     z-index: 9999; /* Position above other elements */
 }
 
@@ -30,49 +25,35 @@
 
 }
 .menu.show {
-    opacity: 1; /* Fully visible */
     transform: translateX(0) translateY(0) rotate(0deg) scale(1.1); /* Slightly scale up for grand effect */
 }
 
-.menu::after {
+.menu::after, menu::before {
     content: "";
-    position: absolute;
-    top: -20px;
-    right: -20px;
-    width: calc(100% + 40px);
-    height: calc(100% + 40px);
-    border-radius: 10px;
-    background: rgba(0, 0, 0, 0.5); /* Dark overlay for better contrast */
-    transition: opacity 1s cubic-bezier(0.77, 0, 0.175, 1) 0.4s, /* Reduced delay for the overlay */
-                transform 1s cubic-bezier(0.77, 0, 0.175, 1) 0.4s; 
-    opacity: 1; /* Start fully visible */
-    z-index: -5; /* Behind the before element */
+            position: fixed;
+            width: 100vw;
+            height: 100vh;
+            background: rgba(20, 21, 26, 0.6);
+            border-bottom-left-radius: 200%;
+            z-index: -1;
+            transition: transform cubic-bezier(0.77, 0, 0.175, 1) 0.6s, border-radius linear 0.8s;
+            transform: translateX(100%) translateY(-100%);
+}
+.menu:after {
+    background: rgba(9, 9, 12, 1);
+    transition-delay: 0s;
 }
 
-.menu.show::after {
-    opacity: 0.4; /* Slightly visible when the menu is shown */
-    transform: scale(1.05) translate(-10px, -10px); /* Scale up and move slightly */
+.menu:before {
+    transition-delay: .2s;
 }
 
-.menu::before {
-    content: "";
-    position: absolute;
-    top: -30px; /* Adjusted position for effect */
-    right: -30px; /* Adjusted position for effect */
-    width: calc(100% + 60px);
-    height: calc(100% + 60px);
-    border-radius: 10px;
-    background: rgba(255, 255, 255, 0.4); /* More visible white background for elegance */
-    transition: opacity 1s cubic-bezier(0.77, 0, 0.175, 1) 0.6s, /* Reduced delay for the background */
-                transform 1s cubic-bezier(0.77, 0, 0.175, 1) 0.6s; 
-    opacity: 1; /* Start fully visible */
-    z-index: -4; /* Behind the menu */
+.menu.show::after,  .menu.show::before{
+    transform: translateX(0%) translateY(0%);
+            border-radius: 0;
 }
 
-.menu.show::before {
-    opacity: 0; /* Fade out when the menu is shown */
-    transform: scale(1.1) translate(-20px, -20px); /* Scale up and move slightly */
-}
+
 
 .menu ul {
     list-style: none;
