--- a/src/Home.css
+++ b/src/Home.css
@@ -1,21 +1,23 @@
-* {
-    margin: 0;
-    box-sizing: border-box;
+
+body {
+  background:  #000;
 }
 
-.container-scroll {
-    width: 100%;
-    height: 100vh;
-    scroll-snap-type: y mandatory; /* Enables snap scrolling */
-    overflow-y: scroll; /* Enables vertical scrolling */
-    overflow-x: hidden; /* Disables horizontal scrolling */
+.page-slider {
+  width: 100%;
+  height: 100%; /* Ensures full height for vertical scrolling */
 }
 
-.container-scroll div {
-    scroll-snap-align: start; /* Ensures the start of the div aligns at the start of the viewport */
-    /* height: 100vh; Each section takes full viewport height */
+.page-slide {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.container-scroll::-webkit-scrollbar {
-    display: none; /* Hides the scrollbar */
+/* .swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
+ */
