--- a/src/components/ImageSlider.css
+++ b/src/components/ImageSlider.css
@@ -95,12 +95,8 @@
   font-size: 1.2rem;
 }
 
-@media (max-width: 768px) {
-  .image-slide {
-      width: 90%;
-      height: auto;
-  }
+@media (max-width: 575px){
   .slide-text {
-      font-size: 1rem;
+    margin-top: 0px;
   }
 }
